[gd_scene load_steps=8 format=3 uid="uid://b23ftpol4g2xu"]

[ext_resource type="Script" path="res://spacecraft/indicators/seven_segment_digit.gd" id="1_d6ti1"]
[ext_resource type="PackedScene" uid="uid://jalj3xsjros2" path="res://spacecraft/indicators/display_segment.tscn" id="2_pnoig"]
[ext_resource type="Script" path="res://spacecraft/indicators/display_segment_dp.gd" id="3_7ki26"]

[sub_resource type="CylinderMesh" id="CylinderMesh_xobo7"]
top_radius = 0.1
bottom_radius = 0.1
height = 0.001
radial_segments = 8
rings = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fu03g"]
resource_local_to_scene = true
albedo_color = Color(0.341176, 0.341176, 0.341176, 1)
emission = Color(0.94902, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p2mkk"]
albedo_color = Color(0.0823529, 0.0823529, 0.0823529, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_henyl"]
size = Vector2(1.75, 2.5)

[node name="SevenSegmentDigit" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.90735e-06, 0.00406837, -0.000120878)
script = ExtResource("1_d6ti1")

[node name="DisplaySegmentA" parent="." instance=ExtResource("2_pnoig")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.767525, -0.203524, 0.11)
state = true

[node name="DisplaySegmentB" parent="." instance=ExtResource("2_pnoig")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2786, -0.723524, 0.11)
state = true

[node name="DisplaySegmentC" parent="." instance=ExtResource("2_pnoig")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2786, -1.76352, 0.11)
state = true

[node name="DisplaySegmentD" parent="." instance=ExtResource("2_pnoig")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.7636, -2.28352, 0.11)
state = true

[node name="DisplaySegmentE" parent="." instance=ExtResource("2_pnoig")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2486, -1.76352, 0.11)
state = true

[node name="DisplaySegmentF" parent="." instance=ExtResource("2_pnoig")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2486, -0.723524, 0.11)
state = true

[node name="DisplaySegmentG" parent="." instance=ExtResource("2_pnoig")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.7636, -1.24352, 0.11)

[node name="DisplaySegmentDP" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 1.5256, -2.28552, 0.11)
mesh = SubResource("CylinderMesh_xobo7")
surface_material_override/0 = SubResource("StandardMaterial3D_fu03g")
script = ExtResource("3_7ki26")

[node name="Background" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.875, -1.25, 0.1)
material_override = SubResource("StandardMaterial3D_p2mkk")
mesh = SubResource("PlaneMesh_henyl")
